# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG  LICENSE  README.md  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci.yml
pre_commit_hooks/: go_run_fmt.py  go_run_test.py
