[metadata]
name = pre_commit_hooks
version = 0.0.1
dscription = Pre-commit hooks i use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoachimFlottorp/pre-commit-hooks
author = Joachim Flottorp
author_email = joachim@flottorp.org
license = MIT
license_files = LICENSE

[options]
packages = find:

[options.entry_points]
console_scripts = 
    go-run-test = pre_commit_hooks.go_run_test:main